openshift/03-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: CI_PROJECT_NAME
  namespace: KUBE_NAMESPACE
  labels:
    app: CI_PROJECT_NAME
    app.gitlab.com/env: CI_ENVIRONMENT_SLUG
    app.gitlab.com/app: CI_PROJECT_PATH_SLUG
    custom-ingress: INGRESS_NAME
  annotations:
    openshift.io/host.generated: 'true'
    app.gitlab.com/env: CI_ENVIRONMENT_SLUG
    app.gitlab.com/app: CI_PROJECT_PATH_SLUG 
spec:
  host: matchestampas.INGRESS_DOMAIN
  __RT_TLS_CFG__
  to:
    kind: Service
    name: CI_PROJECT_NAME
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
